# gentools

./: .gitignore  CMakeLists.txt  README.md
include/: gentools.h
sample/: CMakeLists.txt
sample/source/: main.cpp
test/: CMakeLists.txt
test/source/: gentools.cpp
